# senior-research-agent

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  senior_research_agent.html  test_qwen.py
.github/workflows/: ci.yml
api/: pyproject.toml
cli/: pyproject.toml
docker/: Dockerfile
scripts/: setup.sh
slide-generator/: README.md  run.bat
slide-generator-windows/backend/: requirements.txt
slide-generator-windows/frontend/: index.html
slide-generator/backend/: main.py
src/agent/: executor.py  memory_manager.py  planner.py  reasoning.py  senior_agent.py
src/config/: settings.py
src/models/: llm_interface.py
tests/unit/: test_agent.py
