[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sra-evaluation"
version = "0.1.0"
description = "Evaluation and benchmarking for senior research agent"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "scikit-learn>=1.3",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "black>=23.0", "ruff>=0.1.0"]
ui = ["streamlit>=1.28", "gradio>=4.0"]
