[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sra-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "httpx>=0.25",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "httpx>=0.25", "black>=23.0"]
